# rswjax

./: CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  profetto_profile.py  profile.stats  pyproject.toml  scratch.qmd
docs/: Makefile  conf.py  example.ipynb  make.bat
examples/: brfss.py  simulated.py
src/rswjax/: __init__.py  losesses.py  losses.py  native_lambertw.py  regularizers.py  rsw.py  rswjax.py  solver.py
tests/: test_exceptions_warnings.py  test_losses.py  test_regularizers.py  test_rsw.py  test_rswjax.py  test_solver.py
