[tool.poetry]
name = "rswjax"
version = "0.1.0"
description = "A jax implementation of optimal representative sample weighting"
authors = ["Andrew Timm"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
jax = "^0.4.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
