[tool.poetry]
name = "rswjax"
version = "0.1.0"
description = "A jax implementation of optimal representative sample weighting"
authors = ["Andrew Timm"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
jax = "^0.4.21"
jaxlib = "^0.4.21"
tensorflow-probability = "^0.23.0"
qdldl = "^0.1.7.post0"
pandas = "^2.1.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
pytest = "^7.4.3"
cvxpy = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
